@@ -1,6 +1,8 @@
 sventon change history
 -----------------------------------------------------------------------------------------
 
+[1248] Fixed: Bug #13389 - Keyword expansion values not properly escaped.
+
 [1242] Release 1.4 RC3 (2008-03-10)
 [1236] Fixed: Bug #13325 - Search box too far on the right.
 [1230] Added: Feature #4035 - Loosen restrictions on instance name.
